--- a/src/main/resources/templates/view_product.html
+++ b/src/main/resources/templates/view_product.html
@@ -101,18 +101,20 @@
 							
 
 
+<th:block th:if="${product.stock > 0}">
 
-                            <th:block th:if="${product.stock>0}">
-                            
-                                <th:block th:if="${user==null}">
-                                    <a href="/signin" class="btn btn-danger col-md-12">Add To Cart</a>
-                                </th:block>
-                                <th:block th:unless="${user==null}">
-                                    <a th:href="@{'/user/addCart?pid='+${product.id}+'&uid='+${user.id}}"
-                                       class="btn btn-danger col-md-12">Add To Cart</a>
-                                </th:block>
-                            </th:block>
+        <!-- Only show Add to Cart if user is NOT admin -->
+        <th:block th:if="${user == null or (user != null and user.role != 'ROLE_ADMIN')}">
+            <th:block th:if="${user == null}">
+                <a href="/signin" class="btn btn-danger col-md-12">Add To Cart</a>
+            </th:block>
+            <th:block th:unless="${user == null}">
+                <a th:href="@{'/user/addCart?pid=' + ${product.id} + '&uid=' + ${user.id}}"
+                   class="btn btn-danger col-md-12">Add To Cart</a>
+            </th:block>
+        </th:block>
 
+    </th:block>
                             <th:block th:unless="${product.stock>0}">
                                 <a href="#" class="btn text-white btn-danger col-md-12">Out of Stock</a>
                             </th:block>
